--- a/style.css
+++ b/style.css
@@ -11,12 +11,16 @@ body{
     display: column;
     align-items: center;
     justify-content: center;
-    background: #B0D4F5;
+    background-image: url('images/background2.png');
+    background-size: cover; /* Fit the image to the width */
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .page-header {
-    background-color: #3498db; 
+    background-color: none;
     color: #fff; 
+    font-size: 50px;
     padding: 15px;
     width: 300px;
     height: 105px;
@@ -34,7 +38,7 @@ body{
     position: relative;
     width: 400px;
     height: 105px;
-    background: #fff;
+    background: rgb(255, 255, 255, .2);
     padding: 28px 32px;
     overflow: hidden;
     border-radius: 18px;
@@ -49,17 +53,18 @@ body{
     justify-content: space-between;
 }
 .search-box input{
-    color: #06283D;
+    color: #fff;
     width: 80%;
     font-size: 24px;
     font-weight: 500;
     text-transform: uppercase;
     padding-left: 45px;
+    background: none;
 }
 .search-box input::placeholder{
 font-size: 20px;
 font-weight: 500;
-color: #06283D;
+color: #fff;
 text-transform: capitalize;
 }
 .search-box button{
@@ -90,7 +95,7 @@ font-size: 28px;
 }
 .weather-box .temperature{
     position: relative;
-    color:#06283D;
+    color:#fff;
     font-size: 4rem;
     font-weight: 800;
     margin-top: 30px;
@@ -102,7 +107,7 @@ font-size: 28px;
     font-size: 2.5rem;
 }
 .weather-box .description{
-    color:#06283D;
+    color:#fff;
     font-size: 30px;
     font-weight: 500;
     text-transform: capitalize;
@@ -129,18 +134,18 @@ font-size: 28px;
 }
 
 .weather-details i{
-color:#06283D;
+color:#fff;
 font-size: 30px;
 margin-right: 10px;
 margin-top: 6px;
 }
 .weather-details span{
-    color:#06283D;
+    color:#fff;
     font-size: px;
     font-weight: 500;
 }
 .weather-details p{
-    color: #06283D;
+    color: #fff;
     font-size: 20px;
     font-weight: 500;
 }
@@ -156,7 +161,7 @@ margin-top: 6px;
     width: 70%;
 }
 .not-found p{
-    color:#06283D;
+    color:#fff;
     font-size: 22px;
     font-weight: 500;
     margin-top: 12px;
